--- a/src/views/plantas/index.hbs
+++ b/src/views/plantas/index.hbs
@@ -47,7 +47,10 @@
                             <i class="fas fa-seedling text-2xl text-green-600 dark:text-green-400"></i>
                         </div>
                         <div class="flex gap-2">
-                            <a href="/plantas/{{this.id}}/edit" class="text-gray-400 hover:text-blue-500 transition-colors">
+                            <a href="/plantas/{{this.id}}/schedule" class="text-gray-400 hover:text-blue-500 transition-colors" title="Programar Riego">
+                                <i class="fas fa-clock"></i>
+                            </a>
+                            <a href="/plantas/{{this.id}}/edit" class="text-gray-400 hover:text-blue-500 transition-colors" title="Editar Planta">
                                 <i class="fas fa-edit"></i>
                             </a>
                         </div>
