--- a/src/views/calendario/index.hbs
+++ b/src/views/calendario/index.hbs
@@ -46,9 +46,9 @@
                 <table class="w-full text-left border-collapse">
                     <thead>
                         <tr class="bg-gray-50 dark:bg-gray-700/50 border-b border-gray-100 dark:border-gray-700">
-                            <th class="p-4 font-semibold text-gray-600 dark:text-gray-300">Día</th>
+                            <th class="p-4 font-semibold text-gray-600 dark:text-gray-300">Semana</th>
                             <th class="p-4 font-semibold text-gray-600 dark:text-gray-300">Hora Inicio</th>
-                            <th class="p-4 font-semibold text-gray-600 dark:text-gray-300">Duración</th>
+                            <th class="p-4 font-semibold text-gray-600 dark:text-gray-300">Hora Fin</th>
                             <th class="p-4 font-semibold text-gray-600 dark:text-gray-300">Acción</th>
                             <th class="p-4 font-semibold text-gray-600 dark:text-gray-300 text-right">Opciones</th>
                         </tr>
@@ -57,17 +57,17 @@
                         {{#each calendario}}
                         <tr class="hover:bg-gray-50 dark:hover:bg-gray-700/30 transition-colors">
                             <td class="p-4 text-gray-900 dark:text-white font-medium">
-                                {{this.dia_semana}}
+                                {{this.semana.nombre}}
                             </td>
                             <td class="p-4 text-gray-600 dark:text-gray-300">
-                                {{this.hora_inicio}}
+                                {{this.hora_inicial}}
                             </td>
                             <td class="p-4 text-gray-600 dark:text-gray-300">
-                                {{this.duracion_minutos}} min
+                                {{this.hora_final}}
                             </td>
                             <td class="p-4">
                                 <span class="px-2 py-1 rounded-full text-xs font-medium bg-blue-100 text-blue-800 dark:bg-blue-900/30 dark:text-blue-400">
-                                    {{this.accion.descripcion}}
+                                    Riego
                                 </span>
                             </td>
                             <td class="p-4 text-right">
